--- a/assets/css/util.css
+++ b/assets/css/util.css
@@ -282,38 +282,40 @@
 
 .footer-logo a {
     display: block;
-    height: 20px;
-    width: 121px;
-    background: url('../../assets/images/footer-logo.png') no-repeat center;
+    height: 21px;
+    width: 116px;
+    background: url('../../assets/images/footer-logo.png') no-repeat;
 }
 
-.footer-share a {
-    display: block;
-    height: 20px;
-    width: 117px;
-    background: url('../../assets/images/share.png') no-repeat center;
+.footer-share span a {
+    display: inline-block;
+    margin-right: 10px;
+    width: 21px;
+    height: 19px;
 }
-
+.footer-share .wx{
+    background:url('../images/share.png') no-repeat;  
+}
+.footer-share .weibo{
+    background: url('../images/share.png') no-repeat -33px 0;
+}
+.footer-share .tieba{
+    width: 18px;
+    background: url('../images/share.png') no-repeat -69px 0;
+}
 .footer-bottom {
     padding-top: 10px;
 }
-
 .footer-bottom p {
     width: 427px;
     height: 27px;
-    font-family: MicrosoftYaHei;
-    font-size: 10px;
-    font-weight: normal;
-    font-stretch: normal;
-    line-height: 16px;
-    letter-spacing: 0px;
+    font: 10px/16px  MicrosoftYaHei;
+  
     color: #666666;
 }
-
 /* 
     footer样式结束
 */
-
 
 /* 
     轮播图样式
