--- a/src/detail/article.css
+++ b/src/detail/article.css
@@ -87,7 +87,7 @@
     width: 230px;
     height: 721px;
     padding: 5px 10px 0;
-	background-color: #fff;
+	/* background-color: #fff; */
 }
 .adList li:first-child{
     padding-top: 6px;
